--- a/projects.html
+++ b/projects.html
@@ -417,7 +417,7 @@
 
       <div class="foto foto2">
           <a href="progetti/schawinsky6.html"> <img src="immagini/Schawinsky/6.webp" alt=""> </a>
-          <p> <strong>Olivetti MP\</strong><br>Xanti Schawisnky, 1932 <br>Manifesto </p>
+          <p> <strong>Olivetti MP1</strong><br>Xanti Schawisnky, 1932 <br>Manifesto </p>
       </div>
 
       <div class="foto foto2">
